¡Three.JS activado!
se puede visualizar el objeto en 3D (es un objeto por defecto)

--- a/figuras_style.css
+++ b/figuras_style.css
@@ -66,3 +66,8 @@
     #toolbar a:active {
         color:#ff0000;
     }
+
+    .seleccionProtactor {
+        visibility: hidden;
+        position: absolute;
+    }
